fix: center text on iOS devices

--- a/src/blocks/card/card__likes-container/card__likes-container.css
+++ b/src/blocks/card/card__likes-container/card__likes-container.css
@@ -1,5 +1,5 @@
 .card__likes-container {
     display: flex;
-    display: -webkit-flex;
     flex-direction: column;
+    padding: 0;
 }
